minor enhancement to invoiceGen: added support for mac

--- a/InvoiceGenerator/2016-07-17-Sarkisian.html
+++ b/InvoiceGenerator/2016-07-17-Sarkisian.html
@@ -80,7 +80,7 @@
   </tr>
   <tr>
   <td>
- Sdfsfs </td>
+ Dsfsgsg </td>
   <td>
   <b>
  99 </b>
@@ -130,7 +130,7 @@
   </td>
   <td align="center">
  DATE: <b>
- 2016-07-24 09:48 </b>
+ 2016-07-17 18:02 </b>
   </td>
   </tr>
   </table>
