--- a/InvoiceGenerator/2016-07-17-Dsf.html
+++ b/InvoiceGenerator/2016-07-17-Dsf.html
@@ -63,7 +63,7 @@
   </tr>
   <tr>
   <td>
- Armond Sarkisian <br>
+ Armond Dsf <br>
   </td>
   </tr>
   </table>
@@ -80,10 +80,10 @@
   </tr>
   <tr>
   <td>
- Sdfsfs </td>
+ Sdfsdfs </td>
   <td>
   <b>
- 99 </b>
+ 9 </b>
   </td>
   </tr>
   </table>
@@ -97,7 +97,7 @@
  Sub Total </td>
   <td>
   <b>
- $99.00 </b>
+ $9.00 </b>
   </td>
   </tr>
   <tr>
@@ -113,7 +113,7 @@
  Total Price </td>
   <td>
   <b>
- $107.91 </b>
+ $9.81 </b>
   </td>
   </tr>
   </table>
@@ -130,7 +130,7 @@
   </td>
   <td align="center">
  DATE: <b>
- 2016-07-24 09:48 </b>
+ 2016-07-17 17:56 </b>
   </td>
   </tr>
   </table>
