added more robot framework simple examples

--- a/robot_framework_test1/results/log.html
+++ b/robot_framework_test1/results/log.html
@@ -1717,28 +1717,28 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,12450],[],[[5,0,1,0,[],[1,73,12375],[[0,6,7,0,8,9,0,0,[1,74,3905],[],[[74,2,10]]],[0,11,12,0,13,14,0,0,[1,3979,3002],[],[[6981,2,15]]],[0,16,7,0,17,18,0,0,[1,6982,92],[],[[6982,2,19]]],[0,11,12,0,13,14,0,0,[1,7074,3004],[],[[10077,2,15]]],[0,20,7,0,21,22,0,0,[1,10078,2304],[],[[10078,2,23]]],[0,24,7,0,25,0,0,0,[1,12382,66],[],[]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,31651],[[4,5,6,7,[],[1,18,10775],[],[[8,0,1,9,[10],[1,86,10706],[[0,11,12,0,13,14,0,0,[1,86,3534],[],[[87,2,15]]],[0,16,12,0,17,18,0,0,[1,3621,37],[],[]],[0,19,12,0,20,21,0,0,[1,3658,118],[],[[3659,2,22]]],[0,23,12,0,24,25,0,0,[1,3776,2302],[],[[3777,2,26]]],[0,16,12,0,17,27,0,0,[1,6078,29],[],[]],[0,28,12,0,29,30,0,0,[1,6107,2782],[],[[6107,2,31]]],[0,16,12,0,17,32,0,0,[1,8889,257],[],[]],[0,23,12,0,24,33,0,0,[1,9146,802],[],[[9147,2,34]]],[0,16,12,0,17,35,0,0,[1,9949,78],[],[]],[0,28,12,0,29,36,0,0,[1,10028,678],[],[[10028,2,37]]],[0,38,12,0,39,40,0,0,[1,10706,22],[],[[10728,2,41]]],[0,42,12,0,43,0,0,0,[1,10728,64],[],[]]]]],[],[1,1,1,1]],[44,45,46,7,[],[1,10794,20855],[],[[47,0,1,0,[],[1,10796,20852],[[0,11,12,0,13,14,0,0,[1,10797,4191],[],[[10797,2,15]]],[0,48,49,0,50,51,0,0,[1,14989,3002],[],[[17991,2,52]]],[0,19,12,0,20,21,0,0,[1,17991,8945],[],[[17992,2,22]]],[0,48,49,0,50,51,0,0,[1,26937,3001],[],[[29937,2,52]]],[0,23,12,0,24,53,0,0,[1,29938,1649],[],[[29939,2,54]]],[0,42,12,0,43,0,0,0,[1,31587,61],[],[]]]]],[],[1,1,1,1]]],[],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Locators","*/Users/xasarkis/Development/Personal/python/robot_framework_test/tests/locators.robot","*../tests/locators.robot","*<p>This is some basic info about the whole suite\x3c/p>","*Should be able to search for product","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*<a href=\"http://www.amazon.com\">http://www.amazon.com\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"http://www.amazon.com\">http://www.amazon.com\x3c/a>'","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*Input Text","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*id=twotabsearchtextbox, Ferrari 458","*Typing text 'Ferrari 458' into text field 'id=twotabsearchtextbox'","*Click Button","*<p>Clicks a button identified by `locator`.\x3c/p>","*css=#nav-search &gt; form &gt; div.nav-right &gt; div &gt; input","*Clicking button 'css=#nav-search &gt; form &gt; div.nav-right &gt; div &gt; input'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/xasarkis/Development/Personal/python/robot_framework_test1/tests","*../tests","*Amazon","*/Users/xasarkis/Development/Personal/python/robot_framework_test1/tests/amazon.robot","*../tests/amazon.robot","*<p>This is some basic info about the whole suite\x3c/p>","*User must sign in to check out","*<p>This is some basic info about the test\x3c/p>","*Smoke","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*<a href=\"http://www.amazon.com\">http://www.amazon.com\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"http://www.amazon.com\">http://www.amazon.com\x3c/a>'","*Wait Until Page Contains","*<p>Waits until `text` appears on current page.\x3c/p>","*Your Amazon.com","*Input Text","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*id=twotabsearchtextbox, Ferrari 458","*Typing text 'Ferrari 458' into text field 'id=twotabsearchtextbox'","*Click Button","*<p>Clicks a button identified by `locator`.\x3c/p>","*xpath=//*[@id=\"nav-search\"]/form/div[2]/div/input","*Clicking button 'xpath=//*[@id=\"nav-search\"]/form/div[2]/div/input'.","*\"Ferrari 458\"","*Click Link","*<p>Clicks a link identified by locator.\x3c/p>","*css=#result_0 a.s-access-detail-page","*Clicking link 'css=#result_0 a.s-access-detail-page'.","*Back to search results","*id=add-to-cart-button","*Clicking button 'id=add-to-cart-button'.","*Added to Cart","*Proceed to checkout (1 item)","*Clicking link 'Proceed to checkout (1 item)'.","*Page Should Contain Element","*<p>Verifies element identified by `locator` is found on the current page.\x3c/p>","*ap_email","*Current page contains element 'ap_email'.","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Locators","*/Users/xasarkis/Development/Personal/python/robot_framework_test1/tests/locators.robot","*../tests/locators.robot","*Should be able to search for product","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*css=#nav-search &gt; form &gt; div.nav-right &gt; div &gt; input","*Clicking button 'css=#nav-search &gt; form &gt; div.nav-right &gt; div &gt; input'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Locators","name":"Locators","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:32","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:32","fail":0,"label":"All Tests","pass":2}],[{"elapsed":"00:00:11","fail":0,"label":"Smoke","pass":1}],[{"elapsed":"00:00:32","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":2},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Tests.Amazon","name":"Amazon","pass":1},{"elapsed":"00:00:21","fail":0,"id":"s1-s2","label":"Tests.Locators","name":"Locators","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1481154789812;
+window.output["baseMillis"] = 1481509197475;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 12188;
+window.output["generatedMillis"] = 31525;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20161207 15:53:22 GMT -07:00";
+window.output["generatedTimestamp"] = "20161211 18:20:29 GMT -07:00";
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
