--- a/robot_framework_test4/results/report.html
+++ b/robot_framework_test4/results/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,31651],[[4,5,6,7,[],[1,18,10775],[],[[8,0,1,9,[10],[1,86,10706],[]]],[],[1,1,1,1]],[11,12,13,7,[],[1,10794,20855],[],[[14,0,1,0,[],[1,10796,20852],[]]],[],[1,1,1,1]]],[],[],[2,2,2,2]];
+window.output["suite"] = [1,2,3,0,[],[1,0,2906],[[4,5,6,7,[],[1,21,2884],[],[[8,0,1,0,[],[1,86,2818],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/xasarkis/Development/Personal/python/robot_framework_test1/tests","*../tests","*Amazon","*/Users/xasarkis/Development/Personal/python/robot_framework_test1/tests/amazon.robot","*../tests/amazon.robot","*<p>This is some basic info about the whole suite\x3c/p>","*User must sign in to check out","*<p>This is some basic info about the test\x3c/p>","*Smoke","*Locators","*/Users/xasarkis/Development/Personal/python/robot_framework_test1/tests/locators.robot","*../tests/locators.robot","*Should be able to search for product"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/xasarkis/Development/Personal/python/robot_framework_test4/tests","*../tests","*Google","*/Users/xasarkis/Development/Personal/python/robot_framework_test4/tests/google.robot","*../tests/google.robot","*<p>Search For Something In Google\x3c/p>","*TC: Search For Something"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:32","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:32","fail":0,"label":"All Tests","pass":2}],[{"elapsed":"00:00:11","fail":0,"label":"Smoke","pass":1}],[{"elapsed":"00:00:32","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":2},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Tests.Amazon","name":"Amazon","pass":1},{"elapsed":"00:00:21","fail":0,"id":"s1-s2","label":"Tests.Locators","name":"Locators","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1},{"elapsed":"00:00:03","fail":0,"id":"s1-s1","label":"Tests.Google","name":"Google","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1481509197475;
+window.output["baseMillis"] = 1481509131005;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 31525;
+window.output["generatedMillis"] = 1995;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20161211 18:20:29 GMT -07:00";
+window.output["generatedTimestamp"] = "20161211 18:18:53 GMT -07:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
